--- a/src/components/PasswordReset/PasswordReset.css
+++ b/src/components/PasswordReset/PasswordReset.css
@@ -27,6 +27,7 @@
     color: #000;
     letter-spacing: -0.28px;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .password-reset .form-container .form-field-group {
